--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "arshans-forge-toolkit",
+  "name": "forge-toolkit",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
